# jfbview

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README  cache.hpp  command.cpp  command.hpp  cpp_compat.hpp  depth_conv.c  depth_conv.h  doc.h  document.cpp  document.hpp  draw.c  draw.h  fbpdf.c  framebuffer.cpp  framebuffer.hpp  image_document.cpp  image_document.hpp  input.c  input.h  jfbpdf.1  jfbview.1  jpdfcat.cpp  jpdfgrep.cpp  main.cpp  multithreading.cpp  multithreading.hpp  mupdf.c  mupdf_version.cpp  outline.c  outline.h  outline_view.cpp  outline_view.hpp  (+16 more)
.github/workflows/: build.yaml
cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FindHarfBuzz.cmake  FindImlib2.cmake  FindOpenJPEG.cmake  Makefile  cmake_install.cmake
cmake/doc/: Makefile  cmake_install.cmake
cmake/packaging/: Makefile  cmake_install.cmake
cmake/src/: Makefile  cmake_install.cmake
doc/: CMakeLists.txt  README  README.md  jfbview.1  jfbview.1.html
packaging/: CMakeLists.txt  build-and-check-package-with-docker.sh  build-and-check-with-docker.sh  build-arch.sh  build-deb-in-docker.sh  build-deb.sh  build-package-arch.sh  build-package-deb.sh  build-package-full-source.sh  build-package-rpm.sh  build-rpm.sh  build-with-docker.sh  check-package-arch.sh  check-package-deb.sh  check-package-rpm.sh  clean.sh  generate-man-page-html.sh  post-install-smoke-test.sh  run-tests-deb.sh
src/: CMakeLists.txt  cache.hpp  command.cpp  command.hpp  cpp_compat.hpp  default_config.json  default_file_config.json  detect_and_output_mupdf_version.sh  document.cpp  document.hpp  fitz_document.cpp  fitz_document.hpp  fitz_utils.cpp  fitz_utils.hpp  framebuffer.cpp  framebuffer.hpp  generate_config_cpp.cpp  generate_default_config_cpp.cpp  image_document.cpp  image_document.hpp  jpdfcat.cpp  jpdfgrep.cpp  main.cpp  multithreading.cpp  multithreading.hpp  outline_view.cpp  outline_view.hpp  pdf_document.cpp  pdf_document.hpp  pixel_buffer.cpp  pixel_buffer.hpp  print_mupdf_version.cpp  search_view.cpp  search_view.hpp  settings.cpp  settings.hpp  string_utils.cpp  string_utils.hpp  ui_view.cpp  ui_view.hpp  (+2 more)
tests/: CMakeLists.txt  fitz_document_image_test.cpp  fitz_document_pdf_test.cpp  fitz_document_test.cpp  image_document_test.cpp  pdf_document_test.cpp  run_e2e_tests.py  settings_test.cpp  smoke-test.sh
tests/qemu/: run-qemu-ui.sh
tests/qemu/testdata/: outline_down10.ppm  outline_jump.ppm  outline_unfold.ppm  outline_view.ppm  page1.ppm  page170.ppm  page2.ppm  rotate_right.ppm  scroll_down.ppm  scroll_up.ppm  search_jump.ppm  search_kernel.ppm  search_second.ppm  search_view.ppm  zoom_fit.ppm  zoom_in.ppm  zoom_out.ppm  zoom_width.ppm
